--- a/ThueXeVn/ThueXeVn/Views/Shared/_LayoutHome.cshtml
+++ b/ThueXeVn/ThueXeVn/Views/Shared/_LayoutHome.cshtml
@@ -3,12 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@Html.Raw(ViewBag.Title)</title>
-    <meta name="description" content="@Html.Raw(ViewBag.Description)">
-    @*<meta name="description" content="Cho Thuê Xe Du Lịch, Cho Thuê Xe 7 Chỗ, Thuê Xe 16 Chỗ, Thuê Xe Giá Rẻ, Thuê Xe 29 Chỗ, Cho Thuê Xe 4 Chỗ, Thuê Xe Hà Nội, Taxi Đường Dài Giá Rẻ, Uy Tín">*@
-    <meta name="keywords" content="Cho Thuê Xe Du Lịch, Cho Thuê Xe 7 Chỗ, Thuê Xe 16 Chỗ, Thuê Xe Giá Rẻ, Thuê Xe 29 Chỗ, Cho Thuê Xe 4 Chỗ, Thuê Xe Hà Nội, Taxi Đường Dài Giá Rẻ, Uy Tín">
+    <title>car rental in viet nam</title>
+    <meta name="description" content="car rental in viet nam, ha noi, ho chi minh city,taxi noi bai airport, service for business, for city tour ">
+    
+    <meta name="keywords" content="car rental hanoi, taxi noi bai airport, car rental vietnam, car rental service for business, car rental for city tour">
     <meta name="author" content="ThueXeVn.Com">
-
     <!-- Favicons
     ================================================== -->
     <link rel="shortcut icon" href="~/Content/Theme/1a/img/favicon.ico" type="image/x-icon">
@@ -105,7 +104,7 @@
     ================================================== -->
     @Html.Partial("_Footer")
 
-    <div id="footer_sec">
+    @*<div id="footer_sec">
         <div class="container">            
             <ul style="list-style-type: none; text-align: center; margin-top: 10px;">
                 <li>Dịch vụ nổi bật: </li>
@@ -120,7 +119,7 @@
                 <li><a href="http://thuexevn.com/taxi-noi-bai-gia-re-taxi-san-bay-gia-re">taxi nội bài</a></li>
             </ul>
         </div>
-    </div>
+    </div>*@
 
     
     @*<script src="//images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script>
