--- a/ThueXeVn/ThueXeVn/Content/Theme/1a/css/style.css
+++ b/ThueXeVn/ThueXeVn/Content/Theme/1a/css/style.css
@@ -1,6 +1,8 @@
-@font-face {
-    font-family: myFirstFont;
-    src: url(HelveticaVn-Cn.ttf);
+
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900,900i');
+
+body {
+    font-family: 'Roboto', sans-serif;
 }
 
 body,
@@ -9,7 +11,7 @@ html {
     -moz-osx-font-smoothing: grayscale;
     overflow-y: auto;
     overflow-x: hidden;
-    font-family: myFirstFont;
+    /*font-family: myFirstFont;*/
     /*font-family: Arial, Helvetica, sans-serif;*/
     color: #6f6f6f;
 }
