--- a/ThueXeVn/ThueXeVn/Views/Home/Index.cshtml
+++ b/ThueXeVn/ThueXeVn/Views/Home/Index.cshtml
@@ -37,7 +37,8 @@
 
     <div id="divMainContent" style="height: auto;">
         <div id="divContentBody" class="container-fluid" style="min-height: 304px; padding: 0;">
-            <div id="divBannerImages" class="home-banner" style="height: auto;">
+            @*style="height: auto;"*@
+            <div id="divBannerImages" class="home-banner">
                 <div class="container">
                     <div class="row">
                         @*<div class="col-sm-6 col-sm-push-6">
@@ -54,12 +55,13 @@
                                     <input type="button" value="TÌM XE" class="form-control btn btn-primary btn-block" style="background-color:#449d44;color:#ffffff;" onclick="search();" id="search" />
                                 </div>
                             </div>*@
+
                         <div class="col-md-12">
                             <div class="span5 about-carousel">
                                 <div id="divBannerTextCarousel" class="carousel slide">
                                     <div id="divBannerTexts" class="carousel-inner custom_slider" style="margin-top: 19px; margin-bottom: 19px;">
                                         <div class="item active">
-                                            <a class="highlight-1" target="_blank" href="#">Rental Car in viet nam</a>
+                                            <a class="highlight-1" target="_blank" href="#">Rental Car in Viet Nam</a>
                                         </div>
                                         <div class="item">
                                             <a class="highlight-1" target="_blank" href="#">For <strong>Travel and Business</strong></a>
@@ -71,10 +73,10 @@
                                             <a class="highlight-1" target="_blank" href="#">Car <strong>New</strong> and  <strong>good service </strong></a>
                                         </div>
                                         <div class="item">
-                                            <a class="highlight-1" target="_blank" href="#">taxi airport <strong>airport</strong></a>
+                                            <a class="highlight-1" target="_blank" href="#">Taxi Airport <strong>airport</strong></a>
                                         </div>
                                         <div class="item">
-                                            <a class="highlight-1" target="_blank" href="#">service for business,  <strong>for city tour</strong> </a>
+                                            <a class="highlight-1" target="_blank" href="#">Service for business,  <strong>for city tour</strong> </a>
                                         </div>
                                     </div>
 
@@ -104,7 +106,7 @@
             <div class="col-md-4 col-sm-6">
                 <div class="kf_num_count_wrap">
                     <i class="fa fa-phone"></i>
-                    <a href="#"><h2 class="counter">1261</h2> Calls</a>
+                    <a href="#"><h2 class="counter">561</h2> Calls</a>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
@@ -159,17 +161,27 @@
             <div class="col-md-6 lead text-justify">
                 <div id="gioithieu" style="padding: 15px; color: #333; border-radius: 11px;">
                     <p style="text-indent: 15px;">
-                        Tự hào là đơn vị cung cấp dịch vụ <strong>cho thuê xe</strong> uy tín chất lượng hàng đầu tại Việt Nam trong nhiều năm qua.
-                        Chúng tôi luôn cam kết với khách hàng dịch vụ thuê xe bảo đảm cả về 3 yếu tố: Chất lượng, giá cả và dịch vụ.
+                        Car Rental is a great choice when you would like to visit any place in Viet Nam. It is inconvenient for go by public vehicles. The major advantages of renting a car include convenience, independence, freedom as you can go with your own plan. Renting a car with a driver gives you the chance to design a tailor-made tour. 
                     </p>
                     <p>
-                        <strong>Về chất lượng: </strong>Công ty cam kết chất lượng về xe và tài xế lái xe. Nhân viên lái xe được đào tạo và thực hành bài bản kỹ thuật lái xe cũng như thái độ nhã nhặn, chu đáo đối với khách hàng.
+                        <strong>About quality: </strong><br />
+                       •   Assist you to book car with a driver-guide who can act as a translator and travelling companion<br />
+                       •   An experienced employee and well – trained driver<br />
+                       •   Providing for hiring event without the driver; for leasing weekly, monthly, long term and short term<br />
+
                     </p>
                     <p>
-                        <strong>Về giá cả: </strong>Bảo đảm giá cho thuê xe rẻ nhất, xe không mào, không dán logo.
+                        <strong>About pricing: </strong><br />
+                        •  No charge for cancellation before a day<br />
+                        •  We provide the best and most competitive price in the market.<br />
+                        •  We arrange free an itinerary tours which are suitable for your plan.<br />
+
                     </p>
                     <p>
-                        <strong>Về dịch vụ: </strong>Cam kết dịch vụ chu đáo, nhanh chóng, tận tình. Chúng tôi đáp ứng yêu cầu cho khách hàng ở mọi nơi với đa dạng tất cả các loại xe như: Cho thuê xe du lịch, taxi đường dài giá rẻ, cho thuê xe 4 chỗ, 7 chỗ, 9 chỗ, 16 chỗ, 29 chỗ,… sang trọng mới mẻ. Dịch vụ 24/7 kể cả ngày nghỉ, ngày lễ.
+                        <strong>About service: </strong><br />
+                        •  Providing a wide range of vehicles from 4 to 45 seats. It fully meets your demand about renting a car to travel. It includes vehicalsfr individual, family, a large group of passenger…(special set up a wifi free and VCD, LCD for the bus from 29 seats to 45 seats)<br />
+                        •  Our vehicles are in well kept condition and regularly maintained
+
                     </p>
                 </div>
             </div>
@@ -178,13 +190,13 @@
                     <div class="item">
                         <div class="col-md-8 col-md-push-2">
                             <div class="avatar">
-                                <img src="/Images/comment_nguyenviethuy.png" alt="Anh Nguyễn Viết Huy">
+                                <img src="/Images/Vios.jpg" alt="Toyota Vios" style="width:400px;height:200px;">
                             </div>
                             <p class="avt-cmt">
-                                Anh Viết Huy
+                                Toyota Vios
                             </p>
                             <p class="comment">
-                                Xe mới, chất lượng dịch vụ tốt!
+                                5 seats
                             </p>
                         </div>
                     </div>
@@ -192,13 +204,26 @@
                     <div class="item">
                         <div class="col-md-8 col-md-push-2">
                             <div class="avatar">
-                                <img src="/Images/comment_chithuydung.png" alt="Chị Thùy Nhung">
+                                <img src="/Images/Fortuner.jpg" alt="Toyota Fortuner" style="width:400px;height:200px;">
                             </div>
                             <p class="avt-cmt">
-                                Chị Thùy Nhung
+                                Toyota Fortuner
                             </p>
                             <p class="comment">
-                                Tài xế chu đáo, thân thiện!
+                                8 seats
+                            </p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="col-md-8 col-md-push-2">
+                            <div class="avatar">
+                                <img src="/Images/Mercedes.png" alt="Mercedes sprinter " style="width:380px;height:217px;">
+                            </div>
+                            <p class="avt-cmt">
+                                Mercedes sprinter 
+                            </p>
+                            <p class="comment">
+                                16 seats
                             </p>
                         </div>
                     </div>
