--- a/ThueXeVn/ThueXeVn/Views/Shared/_Footer.cshtml
+++ b/ThueXeVn/ThueXeVn/Views/Shared/_Footer.cshtml
@@ -8,15 +8,15 @@
                 <ul style="list-style-type: none; padding-left: 0;">
                     <li style="margin: 5px 0;"><a href="mailto:thuexevn.com@gmail.com">Email: thuexevn.com@gmail.com</a></li>
                     <li style="margin: 5px 0;">
-                        Di động: <a href="tel:096 410 8688" class="btn btn-primary btn-success">096 410 8688</a>
+                        Mobile Hotline: <a href="tel:096 410 8688" class="btn btn-primary btn-success">(+84)093 912 6888</a>
                     </li>
                     <li style="margin: 5px 0;">
-                        Điện thoại: <a href="tel:0466533377" class="btn btn-primary btn-info">04 665 333 77</a>
+                        Phone: <a href="tel:0466533377" class="btn btn-primary btn-info">(+84)04 665 333 77</a>
                     </li>
                 </ul>
             </div>
             <div class="col-md-4 col-md-6">
-                <ul id="download" style="padding-left: 0; display: block;">
+                @*<ul id="download" style="padding-left: 0; display: block;">
                     <li style="margin-bottom: 5px;">
                         <a href='https://play.google.com/store/apps/details?id=com.quickcar.thuexe'>
                             <img alt='Tải nội dung trên Google Play' src='/images/vi_badge_web_generic.png' style="width:270px;height:80px;" />
@@ -27,7 +27,7 @@
                             <img src="/Images/appstore.svg" style="width:270px;height:80px;" />
                         </a>
                     </li>
-                </ul>
+                </ul>*@
             </div>
             <div class="col-md-4 col-md-6">
                 <ul class="list-inline social pull-right">
