--- a/ThueXeVn/ThueXeVn/Views/Shared/_Layout.cshtml
+++ b/ThueXeVn/ThueXeVn/Views/Shared/_Layout.cshtml
@@ -3,9 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dịch Vụ Cho Thuê Xe Giá Rẻ, Cho Thuê Xe Du Lịch, Taxi Đường Dài</title>
-    <meta name="description" content="Cho Thuê Xe Du Lịch, Cho Thuê Xe 7 Chỗ, Thuê Xe 16 Chỗ, Thuê Xe Giá Rẻ, Thuê Xe 29 Chỗ, Cho Thuê Xe 4 Chỗ, Thuê Xe Hà Nội, Taxi Đường Dài Giá Rẻ, Uy Tín">
-    <meta name="keywords" content="Cho Thuê Xe Du Lịch, Cho Thuê Xe 7 Chỗ, Thuê Xe 16 Chỗ, Thuê Xe Giá Rẻ, Thuê Xe 29 Chỗ, Cho Thuê Xe 4 Chỗ, Thuê Xe Hà Nội, Taxi Đường Dài Giá Rẻ, Uy Tín">
+    <title>car rental in viet nam</title>
+    <meta name="description" content="car rental in viet nam, ha noi, ho chi minh city,taxi noi bai airport, service for business, for city tour ">
+
+    <meta name="keywords" content="car rental hanoi, taxi noi bai airport, car rental vietnam, car rental service for business, car rental for city tour">
     <meta name="author" content="ThueXeVn.Com">
 
     <!-- Favicons
