--- a/ThueXeVn/ThueXeVn/Views/Home/CarRental.cshtml
+++ b/ThueXeVn/ThueXeVn/Views/Home/CarRental.cshtml
@@ -4,12 +4,12 @@
     string link = "";
 }
 
-@section scriptsheader {
+
     <link href="~/Content/jquery.datetimepicker.css" rel="stylesheet" />
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDLPSKQ4QV4xGiQjnZDUecx-UEr3D0QePY&libraries=places" type="text/javascript"></script>
     <script src="/Scripts/jquery.geocomplete.js"></script>
     <script src="~/Scripts/jquery.datetimepicker.js"></script>
-}
+
 
 
 <div class="map_canvas" style="display:none;"></div>
@@ -19,32 +19,49 @@
     <div class="row text-center" style="min-height:667px;">
         <div class="col-sm-12">
             <div class="col-sm-12" id="dv1" style="background-color:white;color:black;border-radius:25px;min-height:567px;border-right:1px solid #808080;display:block;">
-                <h2 style="color:#337ab7;">ĐẶT THUÊ XE</h2>
-                <p style="text-align:left;margin-top:5px;">Điểm đi*</p>
-                <input id="car_from" name="car_from" class="form-control" placeholder="Điểm đi" autocomplete="on" />
+                <h2 style="color:#337ab7;">Rent A Car</h2>
+                <p style="text-align:left;margin-top:5px;">From *</p>
+                <input id="car_from" name="car_from" class="form-control" placeholder="From" autocomplete="on" />
                 <input type="hidden" id="lon1" name="lon1" value="" />
                 <input type="hidden" id="lat1" name="lat1" value="" />
-                <p style="text-align:left;margin-top:5px;">Điểm đến*</p>
-                <input id="car_to" name="car_to" class="form-control" placeholder="Điểm đến" autocomplete="on" />
+                <p style="text-align:left;margin-top:5px;">To *</p>
+                <input id="car_to" name="car_to" class="form-control" placeholder="To" autocomplete="on" />
                 <input type="hidden" id="lon2" name="lon2" value="" />
                 <input type="hidden" id="lat2" name="lat2" value="" />
-                <p style="text-align:left;margin-top:5px;">Loại xe *</p>
+                <p style="text-align:left;margin-top:5px;">Type *</p>
                 <select id="car_type" class="form-control">
                     
                 </select>
-                <p style="text-align:left;margin-top:5px;">Hình thức đi *</p>
+                <p style="text-align:left;margin-top:5px;">Travelling type *</p>
                 <select id="car_hire_type" class="form-control"></select>
-                <p style="text-align:left;margin-top:5px;">Số chỗ *</p>
-                <select id="car_size" class="form-control"></select>
-                <p style="text-align:left;margin-top:5px;">Tên khách hàng*</p>
-                <input id="name" name="name" class="form-control" placeholder="Nhập tên" />
-                <p style="text-align:left;margin-top:5px;">Số điện thoại liên hệ(lái xe sẽ gọi cho bạn)*</p>
-                <input id="phone" name="phone" class="form-control" placeholder="Nhập số điện thoại" />
-                <p style="text-align:left;margin-top:5px;">Thời gian đi*</p>
-                <input type="text" class="form-control" id="from_datetime" placeholder="Thời gian đi">
-                <p style="text-align:left;margin-top:5px;">Thời gian về*</p>
-                <input type="text" class="form-control" id="to_datetime" placeholder="Thời gian đi">
-                <input type="button" value="XÁC NHẬN ĐẶT XE" class="btn btn-primary btn-block" onclick="booking();" style="margin-bottom:5px;" id="btnregister111" />
+                <p style="text-align:left;margin-top:5px;">Passengers  *</p>
+                <select id="car_size" class="form-control">
+                    <option value="1">1 Passenger</option>
+                    <option value="2">2 Passengers</option>
+                    <option value="3">3 Passengers</option>
+                    <option value="4">4 Passengers</option>
+                    <option value="5">5 Passengers</option>
+                    <option value="6">6 Passengers</option>
+                    <option value="7">7 Passengers</option>
+                    <option value="8">8 Passengers</option>
+                    <option value="9">9 Passengers</option>
+                    <option value="10">10 Passengers</option>
+                    <option value="11">11 Passengers</option>
+                    <option value="12">12 Passengers</option>
+                    <option value="13">13 Passengers</option>
+                    <option value="14">14 Passengers</option>
+                    <option value="15">15 Passengers</option>
+                    <option value="16">16 Passengers</option>
+                </select>
+                <p style="text-align:left;margin-top:5px;">Your name *</p>
+                <input id="name" name="name" class="form-control" placeholder="Your name" />
+                <p style="text-align:left;margin-top:5px;">Your phone *</p>
+                <input id="phone" name="phone" class="form-control" placeholder="Your phone" />
+                <p style="text-align:left;margin-top:5px;">Pick up*</p>
+                <input type="text" class="form-control" id="from_datetime" placeholder="Pick up">
+                <p style="text-align:left;margin-top:5px;">Return *</p>
+                <input type="text" class="form-control" id="to_datetime" placeholder="Return">
+                <input type="button" value="CONFIRM" class="btn btn-primary btn-block" onclick="booking();" style="margin-bottom:5px;" id="btnregister111" />
             </div>
         </div><!-- end col 10 with offset 1 to centered -->
     </div> <!-- end contact form outer row with centered text-->
@@ -217,20 +234,20 @@
             }
         }
     });
-    $.ajax({
-        url: "/Api/getCarSize",
-        cache: false
-    }).done(function (html) {
-        var news = '{"news":' + html + '}';
-        var json_parsed = $.parseJSON(news);
-        $("#car_size").html("");
-        for (var i = 0; i < json_parsed.news.length; i++) {
-            if (json_parsed.news[i]) {
-                var name = json_parsed.news[i].name;
-                $("#car_size").append("<option value='" + name + "'>" + name + "</option>");
-            }
-        }
-    });
+    //$.ajax({
+    //    url: "/Api/getCarSize",
+    //    cache: false
+    //}).done(function (html) {
+    //    var news = '{"news":' + html + '}';
+    //    var json_parsed = $.parseJSON(news);
+    //    $("#car_size").html("");
+    //    for (var i = 0; i < json_parsed.news.length; i++) {
+    //        if (json_parsed.news[i]) {
+    //            var name = json_parsed.news[i].name;
+    //            $("#car_size").append("<option value='" + name + "'>" + name + "</option>");
+    //        }
+    //    }
+    //});
 </script>
 
 }
