--- a/ThueXeVn/ThueXeVn/Views/Home/_mh_show_carrental.cshtml
+++ b/ThueXeVn/ThueXeVn/Views/Home/_mh_show_carrental.cshtml
@@ -1,62 +1,64 @@
 ﻿<section class="mh_show_carrental" style="background: #f9f9f9;padding-bottom: 25px;padding-top: 150px;">
     <div class="container">
         <div class="row">
-            <h3 style="text-align: center; color: #333;">Đặt thuê xe</h3>
+            <h3 style="text-align: center; color: #333;">Rent a car</h3>
 
             <div class="row text-center">
                 <div class="col-sm-12">
                     <div class="col-sm-12" id="dv1" style="background-color:white;color:black;border-radius:25px;border-right:1px solid #808080;display:block;padding-top: 10px;padding-bottom: 20px;border-left: 1px solid #808080;">
                         <div class="form-group">
                             <div class="col-sm-6">
-                                <p style="text-align:left;margin-top:5px;">Điểm đi*</p>
+                                <p style="text-align:left;margin-top:5px;">From *</p>
                                 <input id="car_from" name="car_from" class="form-control" placeholder="Điểm đi" autocomplete="on" />
                             </div>
                             <div class="col-sm-6">
-                                <p style="text-align:left;margin-top:5px;">Điểm đến*</p>
+                                <p style="text-align:left;margin-top:5px;">To *</p>
                                 <input id="car_to" name="car_to" class="form-control" placeholder="Điểm đến" autocomplete="on" />
                             </div>
                         </div>                     
 
                         <div class="form-group">
                             <div class="col-sm-6">
-                                <p style="text-align:left;margin-top:5px;">Loại xe *</p>
+                                <p style="text-align:left;margin-top:5px;">Type *</p>
                                 <select id="car_type2" class="form-control"></select>
                             </div>
                             <div class="col-sm-6">
-                                <p style="text-align:left;margin-top:5px;">Hình thức đi *</p>
+                                <p style="text-align:left;margin-top:5px;">Travelling type *</p>
                                 <select id="car_hire_type" class="form-control"></select>
                             </div>
                         </div>
 
                         <div class="form-group">
                             <div class="col-sm-6">
-                                <p style="text-align:left;margin-top:5px;">Số chỗ *</p>
-                                <select id="car_size2" class="form-control"></select>
+                                <p style="text-align:left;margin-top:5px;">Passengers *</p>
+                                <select id="car_size2" class="form-control">
+                                    <option value="1">1 Passenger</option><option value="2">2 Passengers</option><option value="3">3 Passengers</option><option value="4">4 Passengers</option><option value="5">5 Passengers</option><option value="6">6 Passengers</option><option value="7">7 Passengers</option><option value="8">8 Passengers</option><option value="9">9 Passengers</option><option value="10">10 Passengers</option><option value="11">11 Passengers</option><option value="12">12 Passengers</option><option value="13">13 Passengers</option><option value="14">14 Passengers</option><option value="15">15 Passengers</option><option value="16">16 Passengers</option>
+                                </select>
                             </div>              
                             <div class="col-sm-6">
-                                <p style="text-align:left;margin-top:5px;">Tên khách hàng*</p>
-                                <input id="name" name="name" class="form-control" placeholder="Nhập tên" />
+                                <p style="text-align:left;margin-top:5px;">Your name*</p>
+                                <input id="name" name="name" class="form-control" placeholder="Your name" />
                             </div>              
                         </div>
 
                         <div class="form-group">                            
                             <div class="col-sm-6">
-                                <p style="text-align:left;margin-top:5px;">Số điện thoại liên hệ(lái xe sẽ gọi cho bạn)*</p>
-                                <input id="phone" name="phone" class="form-control" placeholder="Nhập số điện thoại" />
+                                <p style="text-align:left;margin-top:5px;">Your phone number*</p>
+                                <input id="phone" name="phone" class="form-control" placeholder="Phone number" />
                             </div>
                             <div class="col-sm-6">
-                                <p style="text-align:left;margin-top:5px;">Thời gian đi*</p>
-                                <input type="text" class="form-control" id=from_datetime placeholder="Thời gian đi">
+                                <p style="text-align:left;margin-top:5px;">Pick up*</p>
+                                <input type="text" class="form-control" id=from_datetime placeholder="Pick up">
                             </div>
                         </div>
                         
                         <div class="form-group">                            
                             <div class="col-sm-6">
-                                <p style="text-align:left;margin-top:5px;">Thời gian về*</p>
-                                <input type="text" class="form-control" id=to_datetime placeholder="Thời gian đi">
+                                <p style="text-align:left;margin-top:5px;">Return*</p>
+                                <input type="text" class="form-control" id=to_datetime placeholder="Return">
                             </div>
                             <div class="col-sm-6">
-                                <input type="button" value="XÁC NHẬN ĐẶT XE" class="btn btn-primary btn-block" onclick="booking();" id="btnregister111" style="margin-top: 36px;height: 43px;" />
+                                <input type="button" value="CONFIRM" class="btn btn-primary btn-block" onclick="booking();" id="btnregister111" style="margin-top: 36px;height: 43px;" />
                             </div>
                         </div>
 
