--- a/ThueXeVn/ThueXeVn/Views/Home/Index.cshtml
+++ b/ThueXeVn/ThueXeVn/Views/Home/Index.cshtml
@@ -557,7 +557,7 @@
                 formdata.append("lon2", document.getElementById("lon2").value);
                 formdata.append("name", document.getElementById("name").value);
                 formdata.append("phone", document.getElementById("phone").value);
-                document.getElementById("btnregister111").value = "Đang đặt xe xin chờ....";
+                document.getElementById("btnregister111").value = "Loading....";
                 document.getElementById("btnregister111").disabled = true;
 
                 var xhr = new XMLHttpRequest();
@@ -567,11 +567,11 @@
                 xhr.onreadystatechange = function () {
                     if (xhr.readyState == 4 && xhr.status == 200) {
                         if (xhr.responseText == "1") {
-                            alert("Bạn đã đặt xe thành công! Tài xế sẽ liên hệ lại sớm nhất với bạn!");
+                            alert("Thanks for your booking! We will contact you soon!");
                         } else {
-                            alert("Chương trình đang cập nhật, xin quay lại sau!");
+                            alert("Error Server! Call 093 912 6888");
                         }
-                        document.getElementById("btnregister111").value = "XÁC NHẬN";
+                        document.getElementById("btnregister111").value = "CONFIRM";
                         document.getElementById("btnregister111").disabled = false;
                     }
                 }
@@ -608,20 +608,20 @@
                 }
             });
 
-            $.ajax({
-                url: "/Api/getCarSize",
-                cache: false
-            }).done(function (html) {
-                var news = '{"news":' + html + '}';
-                var json_parsed = $.parseJSON(news);
-                $("#car_size2").html("");
-                for (var i = 0; i < json_parsed.news.length; i++) {
-                    if (json_parsed.news[i]) {
-                        var name = json_parsed.news[i].name;
-                        $("#car_size2").append("<option value='" + name + "'>" + name + "</option>");
-                    }
-                }
-            });
+            //$.ajax({
+            //    url: "/Api/getCarSize",
+            //    cache: false
+            //}).done(function (html) {
+            //    var news = '{"news":' + html + '}';
+            //    var json_parsed = $.parseJSON(news);
+            //    $("#car_size2").html("");
+            //    for (var i = 0; i < json_parsed.news.length; i++) {
+            //        if (json_parsed.news[i]) {
+            //            var name = json_parsed.news[i].name;
+            //            $("#car_size2").append("<option value='" + name + "'>" + name + "</option>");
+            //        }
+            //    }
+            //});
 
     </script>
 
