--- a/ThueXeVn/ThueXeVn/Views/Home/_banggiaxe1.cshtml
+++ b/ThueXeVn/ThueXeVn/Views/Home/_banggiaxe1.cshtml
@@ -6,12 +6,12 @@
         <div class="col-md-2" id="bg_logo"><img src="~/Content/Images/logo_mv_e1.png" /></div>
         <div class="col-md-offset-1 col-md-5" id="bg_h1" style="display: block; text-align: center;">
             <h3>ThueXeVn.Com</h3>
-            <p style="color: #5BB75B; font-weight: 700; font-size: 19px;">HotLine: <a href="tel:0964108688">096 410 8688</a> - <a href="tel:0979776427">097 977 6427</a></p>
+            <p style="color: #5BB75B; font-weight: 700; font-size: 19px;">HotLine: <a href="tel:093 912 6888">093 912 6888</a> - <a href="tel:0979776427">097 977 6427</a></p>
         </div>
         <div class="col-md-4" id="bg_right">
-            <h3 style="font-size: 11px; font-weight: bold;">Công ty cổ phần Đầu tư Thương mại và Dịch vụ Minh Việt</h3>
-            <p style="font-size: 11px;"><b>Địa chỉ: </b>78 Duy Tân, Kim Ánh Building, Cầu Giấy, Hà Nội</p>
-            <p style="font-size: 11px;"><b>Điện thoại: </b>04 66533377</p>
+            <h3 style="font-size: 11px; font-weight: bold;">Minh Viet Jsc</h3>
+            <p style="font-size: 11px;"><b>Address: </b>78 Duy Tân, Kim Ánh Building, Cầu Giấy, Hà Nội</p>
+            <p style="font-size: 11px;"><b>Hotline: </b>093 912 6888</p>
         </div>
     </div>
     @if (Model != null)
@@ -19,18 +19,18 @@
         <div class="col-md-12">
             <div class="table-responsive">
                 <table class="table table-bordered" id="table_baogia" style="margin-top: 15px;">
-                    <caption>BẢNG BÁO GIÁ XE</caption>
+                    <caption>PRICING TABLE</caption>
                     <thead style="background: #ececec; color: #000;">
                         <tr style="text-align: center;">
-                            <th rowspan="3">Loại xe (số chỗ)</th>
-                            <th rowspan="3">1 ngày trong TP (100km/10h)</th>
-                            <th rowspan="3">1/2 ngày trong TP (50km/5h)</th>
-                            <th rowspan="3">Hà Nội - Nội Bài</th>
-                            <th rowspan="3">Nội Bài - Hà Nội</th>
-                            <th rowspan="3">Khứ hồi Nội Bài</th>
-                            <th rowspan="2" class="bg_23" style="border-bottom: 0;">Ngoài TP 2 chiều</th>
-                            <th rowspan="2" class="bg_yellow3" style="border-bottom: 0;">Ngoài TP 1 chiều</th>
-                            <th rowspan="3">Lưu đêm (đồng/đêm)</th>
+                            <th rowspan="3">Car type (Seats)</th>
+                            <th rowspan="3">One day in City (100km/10h)</th>
+                            <th rowspan="3">1/2 day in City (50km/5h)</th>
+                            <th rowspan="3">Ha Noi - Noi Bai Airport</th>
+                            <th rowspan="3">Noi Bai Airport - Ha Noi</th>
+                            <th rowspan="3">Book Return Nội Bài Airport</th>
+                            <th rowspan="2" class="bg_23" style="border-bottom: 0;">Out Of City(Book Return)</th>
+                            <th rowspan="2" class="bg_yellow3" style="border-bottom: 0;">Out Of City(Single Trip)</th>
+                            <th rowspan="3">Over Night (Vnd/Night)</th>
                         </tr>
                         @*<tr style="text-align: center;">
                                 <th colspan="1" rowspan="2" class="bg_yellow">&lt;100km</th>
@@ -48,7 +48,7 @@
                         @foreach (var item in Model)
                         {
                             <tr>
-                                <td class="bg_fw1">Xe @item.pl_car_type chỗ</td>
+                                <td class="bg_fw1">Car @item.pl_car_type seats</td>
                                 <td onclick="chonloaixe_tuyenduong(@item.pl_car_type,'g1');">@string.Format("{0:#,###}", @item.g1)</td>
                                 <td onclick="chonloaixe_tuyenduong(@item.pl_car_type,'g2');">
                                     @string.Format("{0:#,###}", @item.g2)
@@ -90,21 +90,21 @@
                     </tbody>
                     <tfoot>
                         <tr>
-                            <td style="vertical-align: middle; font-weight: 700; font-size: 5em;" colspan="3" rowspan="5">Ghi Chú:</td>
+                            <td style="vertical-align: middle; font-weight: 700; font-size: 5em;" colspan="3" rowspan="5">Note:</td>
                         </tr>
                         <tr>
                             <td style="text-align: left;" colspan="6" rowspan="5">
 
                                 <ul style="list-style-type: none; padding-left: 0; font-weight: 600;">
                                     <li>
-                                        <b>Riêng với tuyến xe sân bay:</b>
+                                        <b>For go to Airport:</b>
                                         <ul style="list-style-type: none; padding-left: 5px;">
                                             <li>
                                                 <p>
-                                                    - Nếu điểm đi hoặc điểm đến là 4 quận nội thành(Ba Đình, Đống Đa, Hoàn Kiếm, Cầu Giấy): 200.000 (Chiều đi) - 300.000 (chiều về) còn các quận nội thành khác: 250.000 (chiều đi) – 350.000 (chiều về).
+                                                    - If from pick up location and to return location are in 4 district(Ba Đình, Đống Đa, Hoàn Kiếm, Cầu Giấy): 200.000 (forward) - 300.000 (back) and other district: 250.000 (forward) – 350.000 (back).
                                                 </p>
                                             </li>
-                                            <li><p>- Nếu quãng đường > 40km (Chương Mỹ, Quốc Oai,…): tính giá tiền theo Km</p></li>
+                                            <li><p>- If distance of trip > 40kms (Chương Mỹ, Quốc Oai,…): fee are caculated by = distance * price per km</p></li>
 
                                         </ul>
                                     </li>
@@ -119,7 +119,7 @@
                     </tfoot>
 
                 </table>
-                <div><p style="font-weight: 600;">Lưu ý: Toàn bộ giá trên chưa bao gồm <span style="background: #26AAEA; padding: 5px; color: #fff;">phí cầu đường</span> và <span style="background: #26AAEA; padding: 5px;color: #fff;">VAT</span>.</p></div>
+                <div><p style="font-weight: 600;">Note that: All pricing are not include <span style="background: #26AAEA; padding: 5px; color: #fff;">ticket on the road(toll,..)</span> and  <span style="background: #26AAEA; padding: 5px;color: #fff;">VAT tax</span>.</p></div>
             </div>
 
         </div>
