--- a/ThueXeVn/ThueXeVn/Views/Home/banggiaxe.cshtml
+++ b/ThueXeVn/ThueXeVn/Views/Home/banggiaxe.cshtml
@@ -14,8 +14,8 @@
 @{
 
     Layout = "~/Views/Shared/_LayoutContent.cshtml";
-    ViewBag.title = "Bảng giá xe";
-    ViewBag.des = "Bảng giá thuê xe việt nam";
+    ViewBag.title = "Pricing Car Rental";
+    ViewBag.des = "Pricing Car Rental in Viet Nam";
     ViewBag.keywords = "";
     ViewBag.url = @url;
 
@@ -86,7 +86,7 @@
 <div class="row" style="background: #fff; color: #333; padding: 30px 0;">
     <div class="col-md-12">
 
-        <h3>Tìm giá xe</h3>
+        @*<h3>Tìm giá xe</h3>
         <hr />
 
         <div class="form-inline" id="tim_bang_giaxe">
@@ -112,16 +112,7 @@
                     <option value="16">Xe 16 chỗ</option>
                     <option value="29">Xe 29 chỗ</option>
                 </select>
-                @*<select class="form-control" name="Loaixe_socho" id="Loaixe_socho">
-                            <option value="">Tất cả loại xe</option>
-                            <option value="4">Xe 4 chỗ (giá siêu rẻ, không cốp)</option>
-                    <option value="5">Xe 5 chỗ (có cốp)</option>
-                    <option value="7">Xe 7 chỗ</option>
-                    <option value="8">Xe 8 chỗ</option>
-                    <option value="16">Xe 16 chỗ</option>
-                    <option value="29">Xe 29 chỗ</option>
-                    <option value="30">Xe 30 chỗ</option>
-                        </select>*@
+              
             </div>
 
             <div class="form-group">
@@ -139,7 +130,7 @@
             </div>
 
             <button type="submit" class="btn btn-default" onclick="timkiembanggia();"><i class="fa fa-search"></i> Tìm kiếm</button>
-        </div>
+        </div>*@
 
         @if (Model != null)
         {
