--- a/ThueXeVn/ThueXeVn/Views/Shared/_mainNavigation.cshtml
+++ b/ThueXeVn/ThueXeVn/Views/Shared/_mainNavigation.cshtml
@@ -27,9 +27,9 @@
             <ul class="collapse navbar-collapse nav navbar-nav" id="bs-example-navbar-collapse-1">
                 <li>@Html.ActionLink("Home Page", "Index", "Home", new { area = "" }, new { @class = "scroll" })</li>
                 <li><a href="/car-rental" class="scroll">Rent a car</a></li>
-                <li><a href="/home/banggiaxe">Pricing table</a></li>
+                <li><a href="/pricing-rental-car">Pricing table</a></li>
                 <li><a href="/tin/page=1">News</a></li>
-                <li><a href="/taxi-airport">Taxi airport</a></li>
+                <li><a href="/taxi-noi-bai-best-price-taxi-airport-good-service">Taxi airport</a></li>
             </ul>
 
         </div>
@@ -45,9 +45,9 @@
         <ul class="nav navbar-nav">
             <li>@Html.ActionLink("Home Page", "Index", "Home", new { area = "" }, new { @class = "scroll" })</li>
             <li><a href="/car-rental" class="scroll">Rent a car</a></li>
-            <li><a href="/home/banggiaxe">Pricing table</a></li>
+            <li><a href="/pricing-rental-car">Pricing table</a></li>
             <li><a href="/tin/page=1">News</a></li>
-            <li><a href="/taxi-airport">Taxi airport</a></li>
+            <li><a href="/taxi-noi-bai-best-price-taxi-airport-good-service">Taxi airport</a></li>
         </ul>
     </div>
 </div>
